force-app/main/default/objects/FAQ__c/FAQ__c.object-meta.xml
<CustomObject>
    <description>Object for marketplace  FAQ and also in filigreen.com site</description>
    <label>FAQ</label>
    <nameField>
        <displayFormat>FAQ-{0000}</displayFormat>
        <label>FAQ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>