force-app/main/default/objects/FAQ__c/fields/FAQ_Category__c.field-meta.xml
<CustomField>
    <fullName>FAQ_Category__c</fullName>
    <inlineHelpText>FAQ category</inlineHelpText>
    <label>FAQ Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ONBOARDING</fullName>
            </value>
            <value>
                <fullName>ORDERS</fullName>
            </value>
            <value>
                <fullName>DELIVERY</fullName>
            </value>
            <value>
                <fullName>TESTING</fullName>
            </value>
            <value>
                <fullName>SERVICES</fullName>
            </value>
            <value>
                <fullName>CULTIVATION TAX</fullName>
            </value>
            <value>
                <fullName>MINIMUM ORDER QUANTITIES (MOQ)</fullName>
            </value>
            <value>
                <fullName>SUPPLIER PAYMENTS</fullName>
            </value>
            <value>
                <fullName>SAMPLING</fullName>
            </value>
            <value>
                <fullName>SALESFORCE MARKETPLACE &amp; PORTAL</fullName>
            </value>
            <value>
                <fullName>REPORTS AND DASHBOARDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>